# autoIndexer

./: CMakeLists.txt  EdgeCaseTesting.txt  LinkyList.h  LinkyListIter.h  LinkyListTests.cpp  List.h  Nody.h  README.md  Vecty.h  VectyIter.h  VectyTests.cpp  input03.txt  machine.cpp  machine.h  main.cpp
